--- a/public/style.css
+++ b/public/style.css
@@ -17,12 +17,15 @@ body {
 }
 
 nav {
-  background-color: #5793fd;
+  background-color: #9cfad1;
   color: #ffffff;
   height: 80px;
   padding: 10px;
   line-height: 3;
   font-size: 1.2rem;
+}
+nav.ui.tabular.menu {
+  background-color: rgb(116, 204, 116);
 }
 
 a,
@@ -96,7 +99,7 @@ input {
 }
 
 .wrapper {
-  background-color: #f2f8ff;
+  background-color: rgb(169, 221, 194);
   padding-bottom: 100px;
 }
 
@@ -104,6 +107,7 @@ input {
 .m-auto {
   margin: 0 auto;
   width: 500px;
+background-color: rgb(116, 204, 116);
 }
 
 form .workout-type,
